scripts/openshift/ui/galaxy-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: galaxy-ui
  name: galaxy-ui
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8000
  selector:
    app: galaxy-ui
