scripts/openshift/ui/galaxy-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: galaxy
    namespace: galaxy
    labels:
        app: galaxy-api
spec:
    host: galaxy-galaxy.apps-crc.testing
    port:
        targetPort: "5000"
    to:
        kind: Service
        name: galaxy-api
        weight: 100
    wildcardPolicy: None
